# simple-test-framework

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: lib.rs
examples/: simple.rs
src/: lib.rs  test_frameworks.rs
stf-macro/: Cargo.toml
stf-macro/src/: lib.rs
stf-runner/: Cargo.toml
stf-runner/src/: lib.rs
